Fixed spacing and font issue for hero section

--- a/src/components/HeroContent.scss
+++ b/src/components/HeroContent.scss
@@ -16,7 +16,7 @@
 
 .hero__heading {
   font-weight: var(--fw-black);
-  font-size: 50px;
+  font-size: 3.5rem;
   span {
     color: $primary;
   }
@@ -38,12 +38,14 @@
 // Mobile -->
 @media screen and (min-width: 575px) {
   .hero__heading {
-    font-size: 70px;
+    font-size: 4rem;
     padding: 0 15px;
   }
 
   .hero__description {
-    font-size: 25px;
-    margin: 45px 90px;
+    font-size: 24px;
+    margin: 25px 100px;
   }
 }
+
+
